@@ -12,19 +12,24 @@ EXTRA_PROGRAMS += hitex hishrink histretch
 # convenience target to build all the programs here.
 hiall: hitex hishrink histretch
 
-# We want debugging for the parser, and we use features not in POSIX yacc.
-# The result is that we assume bison? Not sure if that's ok.
-AM_YFLAGS = -d -v -Wno-yacc
+## Debugging for the parser as usual.
+## Except we eschew all lex/yacc steps in the Makefile here; see below.
+## AM_YFLAGS = -d -v -Wno-yacc
 
 hitex_CPPFLAGS = $(AM_CPPFLAGS) $(ZLIB_INCLUDES)
+hitex_CPPFLAGS += -I$(srcdir)/libmd5
 hitex_LDADD = $(KPATHSEA_LIBS) $(ZLIB_LIBS)
+hitex_LDADD += libmd5.a
+hitex_DEPENDENCIES = $(KPATHSEA_DEPEND) $(ZLIB_DEPEND) libmd5.a
 #
 histretch_CPPFLAGS = $(AM_CPPFLAGS) $(ZLIB_INCLUDES)
 histretch_LDADD = $(ZLIB_LIBS)
+histretch_DEPENDENCIES = $(ZLIB_DEPEND)
 #
 # The -I$(srcdir)/hitexdir is so the compiler can find the *parser.h file.
 hishrink_CPPFLAGS = $(AM_CPPFLAGS) $(ZLIB_INCLUDES) -I$(srcdir)/hitexdir
 hishrink_LDADD = $(ZLIB_LIBS)
+hishrink_DEPENDENCIES = $(ZLIB_DEPEND)
 
 # HiTeX CWEB sources
 hitex_web = hitexdir/format.w hitexdir/htex.w hitexdir/hitex.w
